--- a/BluetoothCtrl/src/main/AndroidManifest.xml
+++ b/BluetoothCtrl/src/main/AndroidManifest.xml
@@ -26,5 +26,6 @@
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
