--- a/BluetoothCtrl/src/main/AndroidManifest.xml
+++ b/BluetoothCtrl/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".BTCtrlApplication">
         <activity
             android:name="com.savvybud.bluetoothctrl.MainCtrlActivity"
             android:label="@string/app_name"
